# sessile

./: .gitignore  README.md  build.yml  package-lock.json  package.json
.github/workflows/: case.yml  keymap.yml  kibot.yml  rmk.yml
.images/: config.yml  info.json  kd_config.yml
board/: build.sh  config.yaml  right.yaml  sessile.kibot.yaml  sessile.kicad_sym
board/footprints/: 0906.js  3305.js  LR44-03-J.js  MF254V-11-07-0743.js  UMP1NTR.js  switch_power.js  xiao-ble.js
board/output/pcbs/: fp-info-cache  fp-lib-table  sessile.kicad_pcb  sessile.kicad_prl  sessile.kicad_pro  sessile.pcb3d
board/output/pcbs/jlcpcb/: project.db
board/output/pcbs/jlcpcb/gerber/: sessile-CuBottom.gbr  sessile-CuTop.gbr  sessile-EdgeCuts.gbr  sessile-MaskBottom.gbr  sessile-MaskTop.gbr  sessile-NPTH.drl  sessile-PTH.drl  sessile-PasteBottom.gbr  sessile-PasteTop.gbr  sessile-SilkBottom.gbr  sessile-SilkTop.gbr  sessile-VScore.gbr
board/output/pcbs/jlcpcb/production_files/: BOM-sessile.csv  CPL-sessile.csv
board/sessile.3dshapes/: CONN-TH_MY-LR44-03-J.step  CONN-TH_MY-LR44-03-J.wrl  KLP_Lame_Saddle-tilted.wrl  KLP_Lame_Saddle.wrl
board/sessile.pretty/: CONN-TH_MY-LR44-03-J.kicad_mod  HDR-TH_7P-P2.54-V-F_MF254V-11-07-0743.kicad_mod  PG1350_KLP_LAME.kicad_mod  SOT-353_L2.1-W1.3-P0.65-LS2.3-BL.kicad_mod
case/: Cargo.toml  case.py  case.step  combined_drill.drl  holes.py  sessile_case.3mf
case/src/: holes.rs
config/: west.yml  zmk.sh
config/boards/shields/ehrbl/: Kconfig.shield  combos.dtsi  magic.dtsi  sessile.conf  sessile.keymap  sessile_dongle.conf  sessile_peripheral.conf  taps.dtsi
config/boards/shields/sessile/: 28.h  Kconfig.defconfig  combos.dtsi  magic.dtsi  sessile-layouts.dtsi  sessile.keymap  sessile.overlay  sessile.zmk.yml  sessile_central.conf  sessile_central.overlay  sessile_dongle.overlay  taps.dtsi
config/zephyr/: module.yml
rmk/: Cargo.toml  Makefile.toml  README.md  Seeed_XIAO_nRF52840_Sense_bootloader-0.6.1_s140_7.3.0.hex  keyboard.toml  memory.x  sessile.uf2  vial.json
rmk/.cargo/: config.toml
rmk/src/: main.rs
zephyr/: module.yml
