[package]
name = "sessile"
version = "0.3.1"
authors = ["Will Puckett <willpuckett@gmail.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/willpuckett/sessile"
repository = "https://github.com/willpuckett/sessile"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# rmk = { version = "0.7", default-features = false, features = [
# rmk = { git = "https://github.com/HaoboGu/rmk", rev = "refs/pull/591/head", default-features = false, features = [
rmk = { git = "https://github.com/HaoboGu/rmk", branch = "main", features = [
    "async_matrix",
    "nrf52840_ble",
    "adafruit_bl",
    "controller",
] }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c", default-features = false, features = [
    "defmt",
    "peripheral",
    "nrf52840",
] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c", default-features = false, features = [
    "defmt",
    "critical-section-impl",
    "nrf52840",
] }
bt-hci = { version = "0.6", default-features = false, features = ["defmt"] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt"] }
embassy-nrf = { version = "0.8", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
    "time",
] }
embassy-executor = { version = "0.9", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2"

rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3", default-features = false }


[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "sessile"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"

